kubernetes/apps/networking-system/agentgateway/config/mcp/grafana.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name grafana-mcp
spec:
  parentRefs:
    - name: agentgateway-proxy
      sectionName: mcp
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: *name
          group: agentgateway.dev
          kind: AgentgatewayBackend
